@@ -1,3 +1,7 @@
+2004-03-04  mput <root@mput.dip.jp>
+
+	* timidity/reverb.h: Fix undeclared type error
+
 2004-03-03  Saito <saito@intaa.net>
 
 	* timidity/reverb.[ch], timidity/playmidi.c, timidity/readmidi.[ch]:
